--- a/Wallboard/Web.config.sample
+++ b/Wallboard/Web.config.sample
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="NsApiUser" value="marius@bronstring.net" />
+    <add key="NsApiUser" value="" />
     <add key="NsApiPassword" value="" />
   </appSettings>
   <system.web>
